# bmstu

./: CMakeLists.txt  UTP_ver_02.cpp  UTP_ver_03.cpp  main.cpp  ready.cpp  test.cpp
DZ/dz_01/: task_01.cpp  task_02.cpp
UTP/: main.cpp
lab01/: task_03.cpp
lab02/: task_02.cpp  task_03.cpp
lab02/02/: task_02_02.cpp  task_02_03.cpp  task_02_04.cpp  task_02_05.cpp
labs/lab_02/: task_01.cpp
labs/lab_02/02/: task_02_01.cpp
labs/lab_03/: task_01.cpp  task_02.cpp  task_03.cpp
labs/lab_04/: main.cpp  task_01.cpp  task_03.cpp  task_04.cpp  task_05.cpp  task_06.cpp  task_07.cpp
trash/lab_01/: task_1.cpp  task_2.cpp  test.cpp
